fix: fix blog font size on mobile

--- a/src/v1/styles/components-blog.css
+++ b/src/v1/styles/components-blog.css
@@ -223,7 +223,7 @@
   }
 
   .blog-article-content {
-    @apply prose prose-xl prose-stone mx-auto mb-16 max-w-4xl;
+    @apply prose prose-xl prose-stone font-alliance text-navy mx-auto mb-16 max-w-4xl;
 
     h1,
     h2,
@@ -238,8 +238,19 @@
       @apply text-2xl md:text-3xl lg:text-4xl;
     }
 
-    p {
-      @apply font-alliance text-navy lg:text-1.5xl text-lg leading-relaxed md:text-xl;
+    p,
+    ul,
+    ol,
+    a,
+    blockquote,
+    code,
+    pre,
+    figure,
+    figcaption,
+    mark,
+    time,
+    address {
+      @apply lg:text-1.5xl text-lg md:text-xl;
     }
 
     a {
@@ -248,11 +259,6 @@
 
     blockquote {
       @apply border-green-dark text-navy/80 border-l-4 pl-6 italic;
-    }
-
-    ul,
-    ol {
-      @apply text-navy;
     }
 
     code {
